recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: ';' expected but 'else' found.
  else {
  ^Tree:16: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:30: error: expected start of definition
	override def run() {
                 ^Tree:34: error: Unmatched closing brace '}' ignored here
}
^