recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps == 0) {}}
  else {
    current(steps)
    forward(length);
    right(angle);
    tree(steps-1,length*shrink,angle,shrink);
    left(2*angle);
    tree(steps-1,length*shrink,angle,shrink)
    droite(angle)
    backward(length);
    
  }
}